# scripts-com3d2

./: .gitattributes  .gitignore  .pdm-python  LICENSE  README.md  infinity_color_fix.cs  pyproject.toml
deprecated/: mate_tex_cache.cs  mipmap_extend.cs
resources/InfinityColor_Fix/: infinitycolor_fix
resources/Mate_Exporter/: Mate_Exporter.unitypackage
resources/NPRShader/: ShaderList.md
resources/NPRShader/Shaders/: crystal  hologram  liltoon  unlitwf  uts2
resources/NPRShader/ShadersProperties/: Crystal.json  Hologram.json  ParallaxHUD.json  Poiyomi.json  SSFS.json  UnityChanToonShaderV2.json
resources/ShaderPack/: ShaderList.md
resources/ShaderPack/MaterialEditorDefinitions/: Crystal.xml  GlassSphere.xml  Hologram.xml  Liltoon.xml  ParallaxHUD.xml  SSFS.xml  UnityChanToonShaderV2.xml  Unlit_WF.xml
resources/ShaderPack/Shaders/: glass_sphere  liltoon  parallaxhud  ssfs  unlitwf
resources/ShaderPack/ShadersProperties/: Builtin.json  GlassSphere.json  Liltoon.json  Unlit_WF.json
scripts/: change_tex_fix.cs  dcm_sync_anm.cs  extract_ks_scripts.cs  infinity_color_fix.cs  inoutanim_sync.cs  mate_tex_cache.cs  material_mgr_fix.cs  mipmap_extend.cs  model_extend.cs  npr_930_dpi_fix.cs  npr_addition.cs  partsedit_add_bone.cs  pmat_extend.cs  slot_change.cs  vym_enhance.cs  vym_syasei_sync_with_inoutanim.cs  wrap_mode_extend_sc.cs
tools/: gen_me_def.py  me_def.py  shader_def.py
tools/defs/: Crystal.json  GlassSphere.json  Hologram.json  ParallaxHUD.json  SSFS.json  Unlit_WF.json
