[project]
name = "scripts-com3d2"
dependencies = ["pydantic>=2.9.2", "pydantic-xml>=2.14.0", "lxml>=5.3.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
    "pytest>=8.3.3",
]
i18n = [
    "babel>=2.16.0",
]

[tool.pdm.scripts]
gen_me_def = "python tools/gen_me_def.py"
